--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "~16.0.1",
     "rxjs": "~7.8.0",
